--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
