--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "node src/server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
